[tool.poetry]
name = "blackjack"
version = "1.0"
description = "the game of blackjack"
authors = ["Matthew Mahoney"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0.0"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
